[package]
name = "raid-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
ethers = { version = "2", features = ["abigen", "ws", "rustls"] }
dotenv = "0.15"
hex = "0.4.3"   
strum = "0.25.0"
strum_macros = "0.25.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = "2.1"
bson = { version = "2", features = ["chrono-0_4"] }
chrono = "0.4"
reqwest = { version = "0.12.23", features = ["json"]}
once_cell = "1.21.3"
