[package]
name = "raid-ws"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {version = "1", features = ["full"]}
socketioxide = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3"
axum = "0.7"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
mongodb = "2.8"
futures = "0.3"
dotenv = "0.15.0"
